<resources>
    <string name="app_name">Spce</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_assignment">Assignment</string>
    <string name="menu_book">E-Book</string>
    <string name="menu_faculty">Faculty</string>
    <string name="menu_notice">Notice</string>
    <string name="menu_about">About</string>

    <string name="about_college">Sardar Patel College of Engineering, established in 2007, is finest engineering institutes in Gujarat. Sardar Patel College of Engineering is affiliated with Gujarat Technological University (GTU), Ahmadabad and Approved by All India Council for Technical Education (AICTE), New Delhi. Sardar Patel College of Engineering having approved intake of B.E (Sanctioned intake -300 Civil Engineering-60, Computer Engineering-60, Electrical Engineering-30, Information Technology- 90, Mechanical Engineering- ) M.E (Sanctioned Intake Structural Engineering-12).</string>
    <string name="college_name">Sardar Patel College of Engineering</string>
    <string name="college_address">Bakrol, Anand</string>
    <string name="college_mobile">+917574857901</string>
    <string name="college_home">SPEC is a student centric, multidisciplinary, research and holistic development oriented not for profit campus with a view to promote welfare. Within a short span of time, since 2007 till date, it has emerged as a campus known for teaching-learning-activities across the state of Gujarat. The campus, spread across the sprawling lush green environment and a bit away from noise and pollution of city, has number of institutes, named after Iron man of India – Shri Sardar Vallabhbhai Patel, including SPCP, SPCE(ENGG),SPCAM - MBA, SPCAM(BBA,BCA,BBA/ISM), SPCC(B.com), SPCE(B.ED) and SPIAS. All technically professional courses are affiliated with Gujarat Technological University and other courses are affiliated with Sardar Patel University.</string>
    <string name="college_vision">To be an institute committed to excellence in academics, research, knowledge creation and delivery to develop socially- responsible professionals.</string>
    <string name="college_mission">
    To provide innovation and excellence in academic design, delivery and assessment to ensure holistic development of students for employability, entrepreneurship and higher education.
    </string>
</resources>