<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/vampire_black"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="@dimen/text_margin"
                android:text="Sardar Patel College Of Engineering"
                android:textColor="@color/snow"
                android:textSize="@dimen/title_size"/>

            <com.smarteist.autoimageslider.SliderLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/slider"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="375dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/college_home"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Department"
                android:layout_marginTop="@dimen/text_margin"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-black"/>

            <!--            Department-INFO-->
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_gravity="center"
                android:clipToPadding="true"
                android:padding="5dp"
                android:overScrollMode="never"
                android:layout_margin="10dp"/>




<!--            Contact-Details-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact Details"
                    android:layout_marginTop="36dp"
                    android:textSize="@dimen/title_size"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/college_name"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/college_address"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/college_mobile"
                    android:layout_marginTop="@dimen/text_margin"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif"/>

                <ImageView
                    android:id="@+id/map"
                    android:layout_width="wrap_content"
                    android:layout_height="230dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/location"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</FrameLayout>